--- a/deployment/roles/create-role/tasks/main.yml
+++ b/deployment/roles/create-role/tasks/main.yml
@@ -1,28 +1,20 @@
 - name: Get stuff from git
   git:
-    repo: "https://{{ githubuser | urlencode }}:{{ githubpassword | urlencode }}@github.com/Invideo_task_aws.git"
-    dest: /opt
+    repo: "https://Shashankreddysunkara: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@github.com/Shashankreddysunkara/Invideo_task_aws.git"
+    dest: /sunny
     update: yes
     version: main
 
 
 - name: build the Docker image
   shell: | 
-          cd /opt
+          cd /sunny
           echo "# pull nginx-php image"
           docker pull webdevops/php-nginx:ubuntu-18.04
 
 - name: Run the Docker image
   shell: |
-         cd /opt
+         cd /sunny
          echo "# run container with port mapping - host:container"
          docker run -d -p 80:80 --name nginx-php webdevops/php-nginx:ubuntu-18.04
          docker exec -it nginx-php bash -c "echo "<h1>Deployed via Terraform wih ELB</h1>" | sudo tee /var/www/html/index.html"
-
-  
-
-
-
-
-
-
