--- a/deployment/prod-web.yml
+++ b/deployment/prod-web.yml
@@ -1,8 +1,7 @@
 ---
-
 - hosts: prod-web
   remote_user: ubuntu
   become: true
   roles:
-    - {role: ansible-role-docker, tags: [ 'ansible-role-docker' ]}
+    - {role: ansible-role-docker, tags: [ 'docker-role' ]}
     - { role: create-role,  tags: [ 'create-role']}
