Re-write entire IaC
I have merged code from "terraform-ansible-ec2-rds" into "Invideo_task_aws".

NOTE: THIS IS UNDER R&D

--- a/deployment/ansible.cfg
+++ b/deployment/ansible.cfg
@@ -9,11 +9,19 @@
 
 [defaults]
 
-inventory = ./inventory/hosts.ini
+#inventory = ./inventory/hosts.ini
+inventory = ./hosts
+remote_user = ec2-user
+ask_pass = false
 transport = smart
 forks = 50
 poll_interval = 15
 
+[privilege_escalation]
+become = true
+become_method = sudo
+become_user = root
+become_ask_pass = false
 
 # smart - gather by default, but don't regather if already gathered
 # implicit - gather by default, turn off with gather_facts: False
