--- a/.github/workflows/ansible.yml
+++ b/.github/workflows/ansible.yml
@@ -1,19 +1,26 @@
 name: 'Ansible deploy'
 on:
   pull_request:
+    branches:
+      - dev
 
 jobs:
   anisble-deploy:
     name: 'Ansible Deploy'
-    runs-on: ubuntu-18.04
+    runs-on: self-hosted
+    defaults:
+      run:
+        working-directory: /sunny
     steps:
       - name: 'Checkout'
         uses: actions/checkout@main
-      - name: check ansible connectivity
-        run: ansible prod-web -m ping
-      - name: Ansible deployment for roles
-        id: ansible
+      - name: 'Check ansible connectivity'
+        run: ansible test-web -m ping
+      - name: 'Run Terraform'
         run: |
-          cd ./deployment/
-          ansible-playbook prod-web.yml --tags=docker-role -e "githubuser=Shashankreddysunkara" -e "githubpassword=<change-me>"
-          ansible-playbook prod-web.yml --tags=create-role -e "githubuser=Shashankreddysunkara" -e "githubpassword=<change-me>"
+          cd /sunny/Invideo_task_aws/
+          echo "To setup provisioner"
+          terraform init
+          echo "To launch the EC2 cluster: "
+          terraform plan -out=aws.tfplan
+          terraform apply aws.tfplan --auto-approve
