--- a/deployment/prod-web.yml
+++ b/deployment/prod-web.yml
@@ -1,6 +1,6 @@
 ---
-- hosts: tag_Name_webserver-nginx-default-instance-${count.index}
-  remote_user: ec2-user
+- hosts: prod-web
+  remote_user: ubuntu
   become: true
   roles:
     - {role: ansible-role-docker, tags: [ 'docker-role' ]}
