Test ansible inventory connection and admin priv
Warning: : Could not match supplied host pattern, ignoring: test-web
Warning: : No hosts matched, nothing to do

--- a/.github/workflows/ansible.yml
+++ b/.github/workflows/ansible.yml
@@ -15,9 +15,10 @@ jobs:
       - name: 'Checkout'
         uses: actions/checkout@main
       - name: 'Check ansible connectivity'
-        run: ansible test-web -m ping
+        run: ansible test_web -m ping
       - name: 'Run Terraform'
         run: |
+          sudo -i
           cd /sunny/Invideo_task_aws/
           echo "To setup provisioner"
           terraform init
