--- a/deployment/inventory/hosts.ini
+++ b/deployment/inventory/hosts.ini
@@ -1,8 +1,11 @@
-[prod-web]
+[prod_web]
 localhost
 
-[test-web]
+[test_web]
 localhost
 
 [all]
 localhost
+
+[test_web:vars]
+dns_server=13.232.204.158
