--- a/deployment/inventory/hosts.ini
+++ b/deployment/inventory/hosts.ini
@@ -2,10 +2,11 @@
 localhost
 
 [test_web]
-localhost
+self-hosted
 
 [all]
 localhost
 
 [test_web:vars]
 dns_server=13.232.204.158
+ansible_connection=local
