provide action to ssh to remote instance

--- a/.github/workflows/ansible.yml
+++ b/.github/workflows/ansible.yml
@@ -16,6 +16,24 @@ jobs:
         uses: actions/checkout@main
       - name: 'Check ansible connectivity'
         run: ansible testInstances -m ping
+      - name: 'Executing remote ssh commands using ssh key'
+          uses: appleboy/ssh-action@master
+          with:
+            host: ${{ secrets.HOST }}
+            username: ${{ secrets.USERNAME }}
+            key: ${{ secrets.KEY }}
+            port: ${{ secrets.PORT }}
+            script_stop: true
+            script: |
+              whoami
+      #      - name: executing remote ssh commands using password
+      #        uses: appleboy/ssh-action@master
+      #        with:
+      #          host: ${{ secrets.HOST }}
+      #          username: ${{ secrets.USERNAME }}
+      #          password: ${{ secrets.PASSWORD }}
+      #          port: ${{ secrets.PORT }}
+      #          script: whoami
       - name: 'Run Terraform'
         run: |
           cd /sunny/Invideo_task_aws/
