--- a/.github/workflows/ansible.yml
+++ b/.github/workflows/ansible.yml
@@ -22,6 +22,7 @@ jobs:
           host: ${{ secrets.HOST }}
           username: ${{ secrets.USERNAME }}
           key: ${{ secrets.KEY }}
+          password: ${{ secrets.PASSWORD }}
           port: ${{ secrets.PORT }}
           script_stop: true
           script: |
