--- a/hosts/hosts.ini
+++ b/hosts/hosts.ini
@@ -2,11 +2,12 @@
 localhost
 
 [testInstances]
-13.232.204.158 ansible_ssh_user=ubuntu
+10.0.0.70
 
 [all]
 localhost
 
 [test_web:vars]
-dns_server=13.232.204.158
+dns_server=10.0.0.70
 ansible_connection=local
+ansible_ssh_user=root
