--- a/hosts/hosts.ini
+++ b/hosts/hosts.ini
@@ -10,5 +10,5 @@ localhost
 
 [test_web:vars]
 dns_server=10.0.0.70
-ansible_connection=local
-ansible_ssh_user=root
+ansible_connection=paramiko
+ansible_ssh_user=sunny
