--- a/.github/workflows/ansible.yml
+++ b/.github/workflows/ansible.yml
@@ -25,6 +25,7 @@ jobs:
             IdentityFile  ~/.ssh/$KEY
             StrictHostKeyChecking no
           END
+          chmod 600 ~/.ssh/config
         env:
           USERNAME: ${{ secrets.USERNAME }}
           KEY: ${{ secrets.KEY }}
