--- a/.github/workflows/ansible.yml
+++ b/.github/workflows/ansible.yml
@@ -38,8 +38,14 @@ jobs:
         run: |
           ssh rd_test
           cd /home/${{ secrets.USERNAME }}/
-          sudo git clone https://github.com/Shashankreddysunkara/Invideo_task_aws.git
-          cd /home/${{ secrets.USERNAME }}/$CI_REPOSITORY_NAME/
+          mkdir -p sunny
+          cd /home/${{ secrets.USERNAME }}/sunny/
+          git clone https://${{ secrets.GIT_USERNAME }}:${{ secrets.GIT_PASSWORD }}@github.com/${{ secrets.GIT_ACCOUNT }}/$CI_REPOSITORY_NAME.git && \
+          git checkout $CI_REPOSITORY_NAME && \
+          git status && /n/n
+          git diff && /n/n
+          git branch && " \n Current path of working dir is " pwd && \
+          cd /home/${{ secrets.USERNAME }}/sunny/$CI_REPOSITORY_NAME/
           echo "To setup provisioner"
           sudo terraform init
           echo "To launch the EC2 cluster: "
