Update ansible and user_data.sh

--- a/deployment/ansible.cfg
+++ b/deployment/ansible.cfg
@@ -12,6 +12,7 @@
 #inventory = ./inventory/hosts.ini
 inventory = ./hosts
 remote_user = ec2-user
+sudo_user      = root
 ask_pass = false
 transport = smart
 forks = 50
@@ -29,16 +30,69 @@ become_ask_pass = false
 #gathering = implicit
 gathering = smart
 
+[paramiko_connection]
 
+# uncomment this line to cause the paramiko connection plugin to not record new host
+# keys encountered.  Increases performance on new host additions.  Setting works independently of the
+# host key checking setting above.
+record_host_keys=False
+
+[colors]
+highlight = white
+verbose = blue
+warn = bright purple
+error = red
+debug = dark gray
+deprecate = purple
+skip = cyan
+unreachable = red
+ok = green
+changed = yellow
+diff_add = green
+diff_remove = red
+diff_lines = cyan
+
+[diff]
+# Always print diff when running ( same as always running with -D/--diff )
+always = yes
+
+# Set how many context lines to show in diff
+context = 5
 
 # uncomment this to disable SSH key host checking
 #host_key_checking = False
 host_key_checking = False
 
+# change this for alternative sudo implementations
+sudo_exe = sudo
+
+# use this shell for commands executed under sudo
+# you may need to change this to bin/bash in rare instances
+# if sudo is constrained
+executable = /bin/bash
+
+# if set, always use this private key file for authentication, same as
+# if passing --private-key to ansible or ansible-playbook
+private_key_file = ~/.ssh/key123.pem
+
+
 # enable callback plugins, they can output to stdout but cannot be 'stdout' type.
 #callback_whitelist = timer, mail
 callback_whitelist = profile_tasks
 
+# set which cowsay stencil you'd like to use by default. When set to 'random',
+# a random stencil will be selected for each task. The selection will be filtered
+# against the `cow_whitelist` option below.
+#cow_selection = default
+cow_selection = random
+
+# when using the 'random' option for cowsay, stencils will be restricted to this list.
+# it should be formatted as a comma-separated list with no spaces between names.
+# NOTE: line continuations here are for formatting purposes only, as the INI parser
+#       in python does not support them.
+cow_whitelist=bud-frogs,bunny,cheese,daemon,default,dragon,elephant-in-snake,elephant,eyes,\
+              hellokitty,kitty,luke-koala,meow,milk,moofasa,moose,ren,sheep,small,stegosaurus,\
+              stimpy,supermilker,three-eyes,turkey,turtle,tux,udder,vader-koala,vader,www
 
 # What flags to pass to sudo
 # WARNING: leaving out the defaults might create unexpected behaviours
