--- a/.github/workflows/ansible.yml
+++ b/.github/workflows/ansible.yml
@@ -8,14 +8,17 @@ jobs:
   anisble-deploy:
     name: 'Ansible Deploy'
     runs-on: self-hosted
-    defaults:
-      run:
-        working-directory: /sunny
+#    defaults:
+#      run:
+#        working-directory: /sunny
     steps:
       - name: 'Checkout'
         uses: actions/checkout@main
+        # Relative path under $GITHUB_WORKSPACE to place the repository
+        path: '/home/ubuntu/sunny/'
 
-#   NOTE: ONLY USE FOLLOWING STEP "Configure SSH" WHEN YOU ARE RUNNING FOR THE FIRST TIME FOR DEPLOYMENT
+
+      #   NOTE: ONLY USE FOLLOWING STEP "Configure SSH" WHEN YOU ARE RUNNING FOR THE FIRST TIME FOR DEPLOYMENT
 #      - name: Configure SSH
 #        run: |
 #          cat >>~/.ssh/config <<END
@@ -27,7 +30,7 @@ jobs:
 #          END
 #          chmod 600 ~/.ssh/config
 #        env:
-#          USERNAME: ${{ secrets.USERNAME }}
+#          USERNAME: ubuntu
 #          KEY: ${{ secrets.KEY }}
 #          HOST: ${{ secrets.HOST }}
 #          PASSWORD: ${{ secrets.PASSWORD }}
@@ -36,25 +39,25 @@ jobs:
         run: ssh rd_test 'sudo ansible testInstances -m ping'
 
       - name: 'Create deployment directory'
-        run: ssh rd_test 'cd /home/${{ secrets.USERNAME }}/ ; mkdir -p sunny ; echo -e "/n/n" '
+        run: ssh rd_test 'cd /home/ubuntu/ ; mkdir -p sunny ; echo -e "\n\n" '
 
-      - name: 'Clone repo in deployment directory'
-        run: ssh rd_test 'cd /home/${{ secrets.USERNAME }}/sunny/ ; git clone git@github.com-repo-${{ secrets.REPO }}:${{ secrets.GIT_USERNAME }}/${{ secrets.REPO }}.git ; echo -e "/n/n" '
+#      - name: 'Clone repo in deployment directory'
+#        run: ssh rd_test 'cd /home/ubuntu/sunny/ ; git clone git@github.com-repo-Invideo_task_aws:Shashankreddysunkara/Invideo_task_aws.git ; echo -e "\n\n" '
 
       - name: 'Checkout git branch'
-        run:  ssh rd_test 'cd /home/${{ secrets.USERNAME }}/sunny/${{ secrets.REPO }}/ ;  git checkout ${{ secrets.BRANCH }} ; echo -e "/n/n" '
+        run:  ssh rd_test 'cd /home/ubuntu/sunny/Invideo_task_aws/ ;  git checkout dev ; echo -e "\n\n" '
 
       - name: 'git status'
-        run: ssh rd_test 'cd /home/${{ secrets.USERNAME }}/sunny/${{ secrets.REPO }}/ ; git status ; echo -e "/n/n" '
+        run: ssh rd_test 'cd /home/ubuntu/sunny/Invideo_task_aws/ ; git status ; echo -e "\n\n" '
 
       - name: 'git diff'
-        run: ssh rd_test 'cd /home/${{ secrets.USERNAME }}/sunny/${{ secrets.REPO }}/ ; git diff ; echo -e "/n/n" '
+        run: ssh rd_test 'cd /home/ubuntu/sunny/Invideo_task_aws/ ; git diff ; echo -e "\n\n" '
 
       - name: 'git branch'
-        run: ssh rd_test 'cd /home/${{ secrets.USERNAME }}/sunny/${{ secrets.REPO }}/ ; git branch ; echo -e "/n/n" '
+        run: ssh rd_test 'cd /home/ubuntu/sunny/Invideo_task_aws/ ; git branch ; echo -e "\n\n" '
 
       - name: 'Show pwd and make docker-compose deployment'
-        run: ssh rd_test 'cd /home/${{ secrets.USERNAME }}/sunny/${{ secrets.REPO }}/ ; echo -e " Current path of working dir is " ; pwd ; echo -e "/n/n" '
+        run: ssh rd_test 'cd /home/ubuntu/sunny/Invideo_task_aws/ ; echo -e " Current path of working dir is " ; pwd ; echo -e "\n\n" '
 
   Terraform-deploy:
     name: 'Terraform Deploy'
@@ -64,10 +67,10 @@ jobs:
         working-directory: /sunny
     steps:
       - name: 'Terraform init'
-        run: ssh rd_test 'cd /home/${{ secrets.USERNAME }}/sunny/${{ secrets.REPO }}/ ; echo "\n Setting up provisioner \n " ; sudo terraform init ; echo -e "/n/n" '
+        run: ssh rd_test 'cd /home/ubuntu/sunny/Invideo_task_aws/ ; echo "\n Setting up provisioner \n " ; sudo terraform init ; echo -e "\n\n" '
 
       - name: 'terraform plan'
-        run: ssh rd_test 'cd /home/${{ secrets.USERNAME }}/sunny/${{ secrets.REPO }}/ ; sudo terraform plan -out=aws.tfplan ; echo -e "/n/n" '
+        run: ssh rd_test 'cd /home/ubuntu/sunny/Invideo_task_aws/ ; sudo terraform plan -out=aws.tfplan  -var "aws_access_key=${{ secrets.AWS_ACCESS_KEY }}" -var "aws_secret_key=${{ secrets.AWS_SECRET_KEY }}" -var "aws_region=eu-central-1" ; echo -e "\n\n" '
 
       - name: 'terraform apply for Launching the EC2 cluster, rds, LB, SG, VPC, SUBNETS, and NAT'
-        run: ssh rd_test 'cd /home/${{ secrets.USERNAME }}/sunny/${{ secrets.REPO }}/ ; sudo terraform apply aws.tfplan --auto-approve ; echo -e "/n/n" '
+        run: ssh rd_test 'cd /home/ubuntu/sunny/Invideo_task_aws/ ; sudo terraform apply aws.tfplan ; echo -e "\n\n" '
