--- a/.github/workflows/ansible.yml
+++ b/.github/workflows/ansible.yml
@@ -13,9 +13,10 @@ jobs:
 #        working-directory: /sunny
     steps:
       - name: 'Checkout'
-        uses: actions/checkout@main
-        # Relative path under $GITHUB_WORKSPACE to place the repository
-        path: '/home/ubuntu/sunny/'
+        uses: actions/checkout@dev
+        with:
+          # Relative path under $GITHUB_WORKSPACE to place the repository
+          path: '/home/ubuntu/sunny/'
 
 
       #   NOTE: ONLY USE FOLLOWING STEP "Configure SSH" WHEN YOU ARE RUNNING FOR THE FIRST TIME FOR DEPLOYMENT
